# extraterrena

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: blender-upload.yml  docker-publish.yml
docs/: conf.py  index.rst  van_trees_vs_matlab.rst
docs/source/: spatial_filtering.rst
notebooks/: doa-example-sparse-array.ipynb  doa-example.ipynb  meerkat positions.xlsx  meerkat_array.ipynb  nf-doa-example.ipynb  simulate_and_regress.ipynb  streamlit_playground.py
notebooks/gps/: Untitled.ipynb  gp2_2.tle  meerkat positions.xlsx  meerkat_array_real_data.ipynb  meerkat_array_real_data_2.ipynb  sats.xlsx
scenes/: matlab.blend  matlab.mkv  van_trees.blend  van_trees.blend1  van_trees_matlab.py
src/extraterrena/: bandpass_simulation.ipynb
src/spatial_filtering/: arrays.py  bandpass_simulation.ipynb  direction_of_arrival.py  filters.py  simulation.py  utils.py  weighting.py
tests/: test_arrays.py  test_doa.py  test_filters.py  test_simulation.py  test_utils.py
