[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spatial-filtering"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Justin Smallwood", email = "justin.d.smallwood@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "numpy",
  "pytest",
  "black",
  "ruff",
]

[project.urls]
Documentation = "https://github.com/Justin Smallwood/spatial-filtering#readme"
Issues = "https://github.com/Justin Smallwood/spatial-filtering/issues"
Source = "https://github.com/Justin Smallwood/spatial-filtering"

[tool.hatch.version]
path = "src/spatial_filtering/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/spatial_filtering tests}"

[tool.coverage.run]
source_pkgs = ["spatial_filtering", "tests"]
branch = true
parallel = true
omit = [
  "src/spatial_filtering/__about__.py",
]

[tool.coverage.paths]
spatial_filtering = ["src/spatial_filtering", "*/spatial-filtering/src/spatial_filtering"]
tests = ["tests", "*/spatial-filtering/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
